# Smart_Park

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  setup.sh  start.sh
backend/: main.py
data/: citation_hotspots.json  meter_locations.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: occupancy_analysis.py  preprocess.py
